--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "The job was automatically triggered by an $${{github.event_name}} event"
-      - run: echo "This job is running on a $${runner.os}} server hosted by GitHub!"
+      - run: echo "This job is running on a $${{runner.os}} server hosted by GitHub!"
